--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <p>Vendas no mês = R$ 5000,00</p>
     <a href="index.html">Voltar para a página inicial</a>
 
 </body>
